TT implementacion de try y catch en controller