@@ -1,54 +1,72 @@
 package com.company.coursemanagement.application.service.impl;
 
 import com.company.coursemanagement.application.dto.CourseDTO;
-import com.company.coursemanagement.entity.CourseEntity;
+import com.company.coursemanagement.application.service.CourseService;
+import com.company.coursemanagement.domain.exception.CourseNotFoundException;
+import com.company.coursemanagement.domain.model.Course;
 import com.company.coursemanagement.domain.repository.CourseRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 @Service
-public class CourseServiceImpl {
+public class CourseServiceImpl implements CourseService {
 
     private final CourseRepository courseRepository;
 
     public CourseServiceImpl(CourseRepository courseRepository) {
-        this.courseRepository = courseRepository;
+        this.courseRepository = Objects.requireNonNull(courseRepository);
     }
 
+    @Override
+    public CourseDTO create(CourseDTO dto) {
+        Course course = new Course(dto.title(), dto.description(), dto.credits());
+        Course saved = courseRepository.save(course);
+        return toDto(saved);
+    }
+
+    @Override
+    public CourseDTO findById(Long id) {
+        Course course = courseRepository.findById(id)
+                .orElseThrow(() -> new CourseNotFoundException(id));
+        return toDto(course);
+    }
+
+    @Override
     public List<CourseDTO> findAll() {
         return courseRepository.findAll().stream()
-                .map(c -> new CourseDTO(c.getId(), c.getTitle(), c.getDescription(), c.getCredits()))
-                .collect(Collectors.toList());
+                .map(this::toDto)
+                .toList();
     }
 
-    public CourseDTO findById(Long id) {
-        CourseEntity c = courseRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Curso no encontrado con id: " + id));
-        return new CourseDTO(c.getId(), c.getTitle(), c.getDescription(), c.getCredits());
-    }
-
-    public CourseDTO create(CourseDTO dto) {
-        CourseEntity entity = new CourseEntity(null, dto.title(), dto.description(), dto.credits());
-        CourseEntity saved = courseRepository.save(entity);
-        return new CourseDTO(saved.getId(), saved.getTitle(), saved.getDescription(), saved.getCredits());
-    }
-
+    @Override
     public CourseDTO update(Long id, CourseDTO dto) {
-        CourseEntity c = courseRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Curso no encontrado con id: " + id));
-        c.setTitle(dto.title());
-        c.setDescription(dto.description());
-        c.setCredits(dto.credits());
-        CourseEntity updated = courseRepository.save(c);
-        return new CourseDTO(updated.getId(), updated.getTitle(), updated.getDescription(), updated.getCredits());
+        Course existing = courseRepository.findById(id)
+                .orElseThrow(() -> new CourseNotFoundException(id));
+
+        existing.setTitle(dto.title());
+        existing.setDescription(dto.description());
+        existing.setCredits(dto.credits());
+
+        Course updated = courseRepository.save(existing);
+        return toDto(updated);
     }
 
+    @Override
     public void delete(Long id) {
         if (!courseRepository.existsById(id)) {
-            throw new RuntimeException("Curso no encontrado con id: " + id);
+            throw new CourseNotFoundException(id);
         }
         courseRepository.deleteById(id);
+    }
+
+    private CourseDTO toDto(Course course) {
+        return new CourseDTO(
+                course.getId(),
+                course.getTitle(),
+                course.getDescription(),
+                course.getCredits()
+        );
     }
 }
